<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/button_bg_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/create_account"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/button_bg_gray" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_rounded_white_gray_border"
            android:hint="@string/hint_enter_name"
            android:padding="15dp"
            android:singleLine="true"
            android:textColorHint="@color/text_gray"
            android:textSize="14sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_white_gray_border"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColorHint="@color/text_gray"
            android:textSize="14sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_rounded_white_gray_border"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColorHint="@color/text_gray"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/by_agreeing"
            android:textStyle="italic"
            android:textColor="@color/text_gray"/>

        <TextView
            android:id="@+id/txt_terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/url_color"
            android:clickable="true"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_green"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up_using"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_rounded_gray"
            android:text="@string/facebook"
            android:textColor="@color/com_facebook_blue" />

        <Button
            android:id="@+id/btnGplus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_gray"
            android:text="@string/gplus"
            android:textColor="@color/gplus_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_exists"
            android:text="Already Have An Account"
            android:layout_gravity="center_horizontal"
            android:typeface="monospace"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:textColor="#0080ff"/>

    </LinearLayout>

</ScrollView>
