<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/access_code" />

        <EditText
            android:id="@+id/accessCode"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="AVWD63DB90AK18DWKA">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:paddingLeft="10dp"
            android:text="@string/merchant_id" />

        <EditText
            android:id="@+id/merchantId"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="89958" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:paddingLeft="10dp"
            android:text="Order Id" />

        <EditText
            android:id="@+id/orderId"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:text="@string/currency" />

        <EditText
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:ems="10"
            android:text="INR" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:visibility="gone"
            android:text="1.00" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:text="@string/redirect_url" />

        <EditText
            android:id="@+id/redirectUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:visibility="gone"
            android:text="http://hobbistan.com/app/hobbistan/ccavenue/PHP/ccavResponseHandler.php" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:text="@string/cancel_url" />

        <EditText
            android:id="@+id/cancelUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:visibility="gone"
            android:inputType="textUri"
            android:text="http://hobbistan.com/app/hobbistan/ccavenue/PHP/ccavResponseHandler.php" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:text="@string/rsa_url" />

        <EditText
            android:id="@+id/rsaUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:visibility="gone"
            android:inputType="textUri"
            android:text="http://hobbistan.com/app/hobbistan/ccavenue/PHP/GetRSA.php" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dp"
            android:background="@color/button_bg_green"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="48dp"
            android:onClick="onClick"
            android:text="@string/pay_button" />
    </RelativeLayout>
</LinearLayout>